--- a/HeroPecApp/Properties/Settings.settings
+++ b/HeroPecApp/Properties/Settings.settings
@@ -17,5 +17,14 @@
     <Setting Name="IsRemember" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="LocalAdminLogin" Type="System.String" Scope="User">
+      <Value Profile="(Default)">LocalHeroAdmin</Value>
+    </Setting>
+    <Setting Name="LocalAdminPassword" Type="System.String" Scope="User">
+      <Value Profile="(Default)">pass1234</Value>
+    </Setting>
+    <Setting Name="LocalPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
