--- a/HeroPecApp/App.config
+++ b/HeroPecApp/App.config
@@ -41,6 +41,15 @@
       <setting name="IsRemember" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="LocalAdminLogin" serializeAs="String">
+        <value>LocalHeroAdmin</value>
+      </setting>
+      <setting name="LocalAdminPassword" serializeAs="String">
+        <value>pass1234</value>
+      </setting>
+      <setting name="LocalPath" serializeAs="String">
+        <value />
+      </setting>
     </HeroPecApp.Properties.Settings>
   </userSettings>
 </configuration>
