--- a/HeroPecApp/HeroPecApp.csproj
+++ b/HeroPecApp/HeroPecApp.csproj
@@ -235,6 +235,8 @@
       <DependentUpon>HeroPecModel.edmx</DependentUpon>
       <LastGenOutput>HeroPecModel.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\logogif.gif" />
+    <None Include="Resources\logowithoutbgtext.png" />
     <None Include="Resources\zxczxcxzxzxzczxcxzxzcxz.png" />
     <None Include="Resources\Bebas Cyrillic.bmp" />
     <None Include="Resources\minimize_hover.png" />
